--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,6 +15,7 @@ section::-webkit-scrollbar
 section::-webkit-scrollbar-track 
 {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius:10px;
 }
 section::-webkit-scrollbar-thumb
@@ -30,6 +31,7 @@ nav::-webkit-scrollbar
 nav::-webkit-scrollbar-track 
 {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius:10px;
 }
 nav::-webkit-scrollbar-thumb
@@ -46,6 +48,7 @@ html::-webkit-scrollbar
 html::-webkit-scrollbar-track 
 {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius:10px;
 }
 html::-webkit-scrollbar-thumb
@@ -61,6 +64,7 @@ ul::-webkit-scrollbar
 ul::-webkit-scrollbar-track 
 {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius:10px;
 }
 ul::-webkit-scrollbar-thumb
@@ -95,5 +99,4 @@ ul::-webkit-scrollbar-thumb
 .alarmswitch{
 	font-size:120%;
 	padding-bottom:5%;
->>>>>>> Stashed changes
 }
