--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,127 +1,6 @@
-
-.controls {
-  	padding-left: 240px !important;
-}
-
-.controls_side_nav{
-	margin-top: 108px;
-    height: calc(100% - 108px);
-}
-
-
-.admin {
-    padding-left: 240px;
-}
-
-.admin_side_nav{
-    margin-top:64px;
-    background-color: #35384C;
-}
-
-.admin_side_nav li a{
-    color: #DCDCDC !important;
-}
-
-.admin_side_nav li:hover{
-    background-color: transparent;
-}
-
-.admin_side_nav li a:hover{
-    color: #FFF !important;
-}
-
-
-section::-webkit-scrollbar 
-{
-   width: 8px;
-}
-section::-webkit-scrollbar-track 
-{
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   border-radius:10px;
-}
-section::-webkit-scrollbar-thumb
-{
-   background-color: #BAE5F3;
-   border-radius:10px;
-}
-
-nav::-webkit-scrollbar 
-{
-   width: 8px;
-}
-nav::-webkit-scrollbar-track 
-{
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   border-radius:10px;
-}
-nav::-webkit-scrollbar-thumb
-{
-   background-color: #BAE5F3;
-   border-radius:10px;
-}
-
-
-html::-webkit-scrollbar 
-{
-   width: 8px;
-}
-html::-webkit-scrollbar-track 
-{
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   border-radius:10px;
-}
-html::-webkit-scrollbar-thumb
-{
-   background-color: #BAE5F3;
-   border-radius:10px;
-}
-
-ul::-webkit-scrollbar 
-{
-   width: 8px;
-}
-ul::-webkit-scrollbar-track 
-{
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   border-radius:10px;
-}
-ul::-webkit-scrollbar-thumb
-{
-   background-color: #BAE5F3;
-   border-radius:10px;
-}
-
-.headerrow{
-	font-size:250%;
-	position:relative;
-	top:-25px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.portlet-title {
-	padding: 0;
-	min-height: 48px;
-}
-
-.truckdropdown{
-	position: relative;
-	top: -25px;
-	left: 15px;
-}
-
-.resize {
-	resize: none;
-	height: 400px;
-	width: 100%;
-}
-
-.alarmswitch{
-	font-size:120%;
-	padding-bottom:5%;
-}
+/*dwadwajfiuowaijidjwaidjowajfw
+adwakifjwaoijfijwapkdopwakdwakpdwa
+fiwafjoipoakdmpcampiwkfopkwapodac
+wadiwajfpokwadmkwanfoijwaprkwad
+iaoiwakjkmnojwanhvjoijgpir
+awminoaoiufjontoinbosjifejomc*/
