User login routing and validation

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -125,3 +125,23 @@ ul::-webkit-scrollbar-thumb
 	font-size:120%;
 	padding-bottom:5%;
 }
+
+.btn-group{
+    display: inline-block;
+    vertical-align: bottom;
+}
+
+.card .title{
+    width: 100%;
+    padding: 10px 20px;
+    border-radius: 2px 2px 0 0;
+    display: inline-block;
+    border-bottom: 1px solid #d0d0d0;
+}
+.card .title h5{
+    float: left;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    margin: 0;
+    color: rgba(0,0,0,.65);
+}
