--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -213,7 +213,7 @@ ul::-webkit-scrollbar-thumb
 }
 
 .tablehead{
-    background-color:#96A0AC;
-    color:black;
+    background-color:#51BAF7;;
+    color: white;
     font-weight:bold;
 }
