--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -217,3 +217,20 @@ ul::-webkit-scrollbar-thumb
     color: white;
     font-weight:bold;
 }
+
+.dropdown-notification{
+    background-color: #FFFFFF;
+    margin: 0;
+    display: none;
+    min-width: 400px; /* Changed this to accomodate content width */
+    max-height: auto;
+    margin-left: -1px; /* Add this to keep dropdown in line with edge of navbar */
+    overflow: hidden; /* Changed this from overflow-y:auto; to overflow:hidden; */
+    opacity: 0;
+    position: absolute;
+    white-space: nowrap;
+    z-index: 1;
+    will-change: width, height;
+        height: 300px;
+    overflow-y: auto;
+}
