tested with live data and fixed bugs encounted with live data

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -223,7 +223,6 @@ ul::-webkit-scrollbar-thumb
     margin: 0;
     display: none;
     min-width: 400px; /* Changed this to accomodate content width */
-    max-height: auto;
     margin-left: -1px; /* Add this to keep dropdown in line with edge of navbar */
     overflow: hidden; /* Changed this from overflow-y:auto; to overflow:hidden; */
     opacity: 0;
@@ -231,6 +230,6 @@ ul::-webkit-scrollbar-thumb
     white-space: nowrap;
     z-index: 1;
     will-change: width, height;
-        height: 300px;
+    max-height: 300px;
     overflow-y: auto;
 }
